--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "next-preact",
-  "version": "0.0.2",
-  "main": "index.js",
+  "name": "blog.mystiar",
+  "version": "0.0.1",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node server.js",
@@ -9,18 +9,21 @@
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "@zeit/next-css": "0.2.1-canary.4",
+    "@zeit/next-css": "1.0.1",
     "cacheable-response": "^1.6.12",
     "compression": "^1.7.4",
     "cross-env": "^5.2.0",
+    "dexie": "^2.0.4",
     "express": "^4.17.1",
     "module-alias": "^2.2.0",
-    "next": "^8.1.0",
+    "next": "^8.1.1-canary.63",
     "next-fonts": "^0.17.0",
     "next-nprogress": "^1.4.0",
     "preact": "^10.0.0-beta.3",
     "preact-render-to-string": "^5.0.4",
-    "preact-ssr-prepass": "^1.0.0"
+    "preact-ssr-prepass": "^1.0.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1"
   },
   "_moduleAliases": {
     "react": "node_modules/preact/compat",
@@ -28,10 +31,14 @@
     "react-ssr-prepass": "node_modules/preact-ssr-prepass",
     "components": "components",
     "css": "static/css",
-    "static": "static"
+    "static": "static",
+    "stores": "stores"
   },
   "devDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "resolutions": {
+    "styled-jsx": "3.0.0"
   }
 }
