--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "@zeit/next-css": "1.0.1",
+    "@zeit/next-css": "1.0.2-canary.2",
     "cacheable-response": "^1.6.12",
     "compression": "^1.7.4",
     "cross-env": "^5.2.0",
@@ -30,7 +30,7 @@
     "react-dom": "node_modules/preact/compat",
     "react-ssr-prepass": "node_modules/preact-ssr-prepass",
     "components": "components",
-    "css": "static/css",
+    "css": "static/assets/css",
     "static": "static",
     "stores": "stores"
   },
